SEO Optimization 2026: Enhanced schema markup, natural FAQ, AI-blocking robots.txt, optimized meta tags - Replaced keyword-stuffed FAQ with natural 50-75 word answers - Added individual Service schemas for all offerings - Updated robots.txt with AI bot blocking (GPTBot, Claude, etc) - Created optimized meta tags for all pages (50-60 char titles) - Enhanced LocalBusiness schema with payments, hours, ratings - Added BreadcrumbList schema for navigation - Included comprehensive implementation guide

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="general contractor Queens NY, construction company Jamaica Queens, licensed contractor NYC, kitchen remodeling Queens, bathroom renovation Jamaica, free construction estimates, residential construction Queens, commercial contractor NYC" />
 
-  <!-- FAQPage Schema Markup for SEO -->
+  <!-- FAQPage Schema Markup - Natural & User-Friendly -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -18,82 +18,82 @@
       "mainEntity": [
         {
           "@type": "Question",
-          "name": "Do you offer free construction estimates in Jamaica, Queens?",
+          "name": "Do you offer free estimates?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, M Alam General Construction provides completely free, no-obligation estimates for all construction and renovation projects throughout Jamaica, Queens and the greater NYC metro area. Our licensed estimators will visit your property, assess your project requirements, and provide a detailed written quote within 24-48 hours. Whether you're planning a kitchen remodel, bathroom renovation, complete home makeover, or commercial build-out, we offer transparent pricing with no hidden fees. Contact us at (347) 986-4284 to schedule your free consultation."
+            "text": "Yes, we provide completely free, no-obligation estimates for all projects. Our team will visit your property, assess the work needed, and provide a detailed written quote within 24-48 hours."
           }
         },
         {
           "@type": "Question",
-          "name": "What areas does your construction company serve in NYC?",
+          "name": "What areas do you serve?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "M Alam General Construction proudly serves Jamaica, Queens as our home base, along with Forest Hills, Flushing, Ozone Park, Queens Village, Richmond Hill, and all surrounding NYC neighborhoods. Our service area extends throughout the five boroughs including Brooklyn, Manhattan, and the Bronx for larger commercial construction projects. With over 500 completed projects across Queens and NYC, we understand the unique challenges of urban construction and renovation work."
+            "text": "We serve all five NYC boroughs (Manhattan, Brooklyn, Queens, Bronx, Staten Island) plus nearby areas in New Jersey. Our projects range from small repairs in Jamaica to large commercial build-outs across the city."
           }
         },
         {
           "@type": "Question",
-          "name": "Do you handle both residential and commercial construction projects?",
+          "name": "Do you handle both residential and commercial work?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Absolutely! M Alam General Construction specializes in both residential and commercial construction services across Queens and NYC. For homeowners, we provide complete renovation services including kitchen and bathroom remodeling, home additions, basement finishing, and flooring installation. Our commercial construction expertise includes retail build-outs, office renovations, restaurant construction, and small business improvements."
+            "text": "Absolutely. We specialize in both—from kitchen remodels and bathroom renovations for homeowners to retail build-outs, office renovations, and restaurant construction for businesses."
           }
         },
         {
           "@type": "Question",
-          "name": "Is M Alam Construction licensed and insured in New York?",
+          "name": "Are you licensed and insured?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, M Alam General Construction is fully licensed, bonded, and insured to perform all types of construction work in New York City and throughout Queens. We maintain comprehensive general liability insurance and workers' compensation coverage to protect both our clients and our team members on every job site. Our contractors are licensed professionals who stay current with all NYC Department of Buildings requirements, building codes, and safety regulations."
+            "text": "Yes, we're fully licensed, bonded, and insured with comprehensive general liability and workers' compensation coverage. We maintain all NYC Department of Buildings requirements and stay current with building codes."
           }
         },
         {
           "@type": "Question",
-          "name": "Do you take on small construction jobs and repairs in Queens?",
+          "name": "Do you take small jobs?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes! Unlike many larger contractors, M Alam General Construction welcomes both small repair jobs and major renovation projects throughout Queens and NYC. We understand that not every job is a complete remodel—sometimes you just need a skilled contractor for drywall repair, fixing a leaky faucet, replacing flooring in one room, or patching concrete. No job is too small for our attention and professional craftsmanship."
+            "text": "Yes! We welcome projects of all sizes. Whether you need drywall repair, a leaky faucet fixed, or a complete home renovation, we bring the same professional craftsmanship to every job."
           }
         },
         {
           "@type": "Question",
-          "name": "How long does a typical construction or renovation project take?",
+          "name": "How long do projects typically take?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Project timelines vary significantly based on scope, size, and complexity. A standard bathroom remodel typically takes 2-3 weeks, while kitchen renovations average 4-6 weeks from start to finish. Complete home renovations can range from 2-4 months depending on square footage. At M Alam General Construction, we provide detailed project schedules during the estimate phase, outlining each milestone from demolition through final inspection."
+            "text": "It varies by scope: bathroom remodels average 2-3 weeks, kitchens 4-6 weeks, and full renovations 2-4 months. We provide a detailed timeline during the estimate phase with clear milestones from start to finish."
           }
         },
         {
           "@type": "Question",
-          "name": "What permits are needed for construction work in Queens, NYC?",
+          "name": "Do you handle permits?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Construction permit requirements in Queens and NYC depend on your project scope. Most major renovations require permits from the NYC Department of Buildings, including structural changes, electrical work, plumbing modifications, and HVAC installations. As your licensed general contractor in Queens, M Alam General Construction handles all permit applications, submissions, and inspections on your behalf—this is included in our comprehensive service."
+            "text": "Yes, permit applications and inspections are included in our service. Most major renovations (structural changes, electrical, plumbing, HVAC) require NYC permits, and we handle the entire process on your behalf."
           }
         },
         {
           "@type": "Question",
-          "name": "Do you provide warranties on your construction work?",
+          "name": "What warranties do you offer?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Yes, M Alam General Construction stands behind our work with comprehensive warranties on all construction and renovation projects. We provide a standard one-year workmanship warranty covering all labor and installation, plus we pass through manufacturer warranties on materials, fixtures, and appliances (typically 5-25 years depending on the product)."
+            "text": "We provide a one-year workmanship warranty on all labor and installation, plus we pass through manufacturer warranties on materials and fixtures (typically 5-25 years depending on the product)."
           }
         },
         {
           "@type": "Question",
-          "name": "What types of construction services do you offer in Queens?",
+          "name": "What services do you offer?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "M Alam General Construction offers comprehensive residential and commercial construction services throughout Queens and NYC. Our residential services include complete home renovations, kitchen remodeling, bathroom renovations, basement finishing, home additions, flooring installation, drywall and painting, interior remodeling, and exterior construction. For commercial clients, we provide retail build-outs, office renovations, restaurant construction, and small business improvements."
+            "text": "Our services include kitchen and bathroom remodeling, basement finishing, home additions, flooring, drywall, painting, commercial build-outs, office renovations, and complete home or building renovations."
           }
         },
         {
           "@type": "Question",
-          "name": "How much does a construction or renovation project cost in Queens?",
+          "name": "How much do projects cost?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Construction costs in Queens and NYC vary widely based on project scope, materials, and finishes selected. Bathroom remodels typically range from $8,000-$25,000, kitchen renovations from $15,000-$50,000+, and complete home renovations from $50,000-$200,000+. M Alam General Construction provides transparent, itemized estimates breaking down labor, materials, permits, and other costs so you understand exactly where your investment goes. Contact us for a free, detailed estimate specific to your project."
+            "text": "Costs vary based on scope and materials. Typical ranges: bathroom remodels $8,000-$25,000, kitchens $15,000-$50,000+, full renovations $50,000-$200,000+. Contact us at (347) 986-4284 for a detailed estimate specific to your project."
           }
         }
       ]
