--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
   <meta name="keywords"
     content="general contractor Queens NY, construction company Jamaica Queens, licensed contractor NYC, kitchen remodeling Queens, bathroom renovation Jamaica, free construction estimates, residential construction Queens, commercial contractor NYC" />
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QBZWFSB5TJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-QBZWFSB5TJ');
+  </script>
+
   <!-- FAQPage Schema Markup - Natural & User-Friendly -->
   <script type="application/ld+json">
     {
